# Matrix

./: .gitignore  CMakeLists.txt  formula_tests.c  tests.c
.c/: complex.c  fieldinfo.c  main.c  matrix.c
.h/: complex.h  fieldinfo.h  matrix.h
